--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>gztlr.com</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gztlr.com</name>
+	<packaging>jar</packaging>
 	<description>www.gztlr.com</description>
 	<properties>
 		<java.version>17</java.version>
@@ -44,11 +45,16 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>-->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>1.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -56,8 +62,8 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -85,6 +91,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>gztlr</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
