--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,17 +24,23 @@ jobs:
 
     - name: Deploy to Ubuntu Server
       run: |
-        rsync -avz -e "sshpass -p ${{ secrets.SERVER_SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no" target/* root@172.232.209.75:/home/gztlr
+        rsync -avz -e "sshpass -p ${{ secrets.SERVER_SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no" target/* ${{ secrets.SERVER_SSH_USERNAME }}@${{ secrets.SERVER_SSH_IP }}:/home/gztlr
       env:
+        SERVER_SSH_IP: ${{ secrets.SERVER_SSH_IP }}
+        SERVER_SSH_USERNAME: ${{ secrets.SERVER_SSH_USERNAME }}
         SERVER_SSH_PASSWORD: ${{ secrets.SERVER_SSH_PASSWORD }}
 
     - name: Kill Java Application
       run: |
-        sshpass -p ${{ secrets.SERVER_SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no root@172.232.209.75 "pkill -f 'java -jar /home/gztlr/gztlr.jar'"
+        sshpass -p ${{ secrets.SERVER_SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_SSH_USERNAME }}@${{ secrets.SERVER_SSH_IP }} "pkill -f 'java -jar /home/gztlr/gztlr.jar'"
       env:
+        SERVER_SSH_IP: ${{ secrets.SERVER_SSH_IP }}
+        SERVER_SSH_USERNAME: ${{ secrets.SERVER_SSH_USERNAME }}
         SERVER_SSH_PASSWORD: ${{ secrets.SERVER_SSH_PASSWORD }}
     - name: Run Java Application
       run: |
-        sshpass -p ${{ secrets.SERVER_SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no root@172.232.209.75 "nohup java -jar /home/gztlr/gztlr.jar > /dev/null 2>&1 &"
+        sshpass -p ${{ secrets.SERVER_SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_SSH_USERNAME }}@${{ secrets.SERVER_SSH_IP }} "nohup java -jar /home/gztlr/gztlr.jar > /dev/null 2>&1 &"
       env:
+        SERVER_SSH_IP: ${{ secrets.SERVER_SSH_IP }}
+        SERVER_SSH_USERNAME: ${{ secrets.SERVER_SSH_USERNAME }}
         SERVER_SSH_PASSWORD: ${{ secrets.SERVER_SSH_PASSWORD }}
